--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,11 @@ services:
   pacc:
     image: maprtech/pacc:7.2.0_9.1.0_ubuntu20_yarn_fuse_hbase_hive_spark_streams
     restart: unless-stopped
+    ports:
+      - "3000:3000"
+    cap_add:
+      - SYS_ADMIN
+      - SYS_RESOURCE
     environment:
       MAPR_CLUSTER: df20
       MAPR_TZ: Europe/London
