--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  mapr-client:
+  client:
     image: maprtech/pacc:7.2.0_9.1.0_ubuntu20_yarn_fuse_hbase_hive_spark_streams
     restart: unless-stopped
 
@@ -11,7 +11,7 @@ services:
     working_dir: /app
     # Overrides default command so things don't shut down after the process ends.
     # entrypoint: /app/docker-init.sh
-    entrypoint: bash -c 'mv /etc/apt/sources.list.d/mapr* /tmp/; ( [ -f /app/docker-init.sh ] || wget https://raw.githubusercontent.com/erdincka/pacc-app/master/docker-init.sh ) ; bash /app/docker-init.sh'
+    entrypoint: bash -c 'mv /etc/apt/sources.list.d/mapr* /tmp/; ( [ -f /docker-init.sh ] || wget -O /docker-init.sh https://raw.githubusercontent.com/erdincka/pacc-app/master/docker-init.sh ) ; bash /docker-init.sh'
     # command: sleep infinity
 
     privileged: true
